See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.88.00

              ppmhist: sort secondarily by RGB with -sort=frequency, so
              output is repeatable.

              pnmcolormap: Add -splitpix, -splitcol, -splitdim.
              Thanks Vladislav Zavjalov.

              jpeg2ktopam, pamtojpeg2k: fix negative array index.  Always
              broken (pamtojpeg2k was new in Netpbm 10.12 (November 2002)).

              jpeg2ktopam, pamtojpeg2k: fix assertion failure.  Always
              broken (pamtojpeg2k was new in Netpbm 10.12 (November 2002)).

              jpeg2ktopam: Fix memory leak after decoder failure.  Always
              broken (pamtojpeg2k was new in Netpbm 10.12 (November 2002)).

              jpeg2ktopam: fix null pointer dereference.  Always broken
              (pamtojpeg2k was new in Netpbm 10.12 (November 2002)).

              pnmtorle, rletopnm: fix wild pointer dereference when memory
              allocation fails.  Always broken (programs were added to
              Netpbm in Release 9.0 (April 2000).

19.06.28 BJH  Release 10.87.00

              pamfind: Add -machine .

              Multiple: fix bug: when you specify the same option twice, you
              can get a syntax error, with the message telling you you
              specified some other option that conflicts with it.  Should just
              take the last setting.

              pnmtopng: Fix bug: Defaults to no filters.  Should be all
              filters.  Effect is larger PNG output.  Broken after Netpbm
              10.26 (January 2005) but no later than Netpbm 10.35 (August
              2006).

              pnmtopng: Fix bug: Doesn't allow multiple filter options.
              Broken after Netpbm 10.26 (January 2005) but no later than
              Netpbm 10.35 (August 2006).

              pnmcrop: Don't allow -borderfile with -reportXXX.  It doesn't